<resources>
    <string name="app_name">Formulir App</string>
    <string name="add">Tambah</string>
    <string name="name">Nama</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="male">Laki-Laki</string>
    <string name="female">Perempuan</string>
    <string name="job">Pekerjaan</string>
    <string name="city">Kota</string>
    <string name="phone">Nomor Telepon</string>
    <string name="whatsapp">Nomor Whatsapp</string>
    <string name="email">Email</string>
    <string name="process">Proses</string>
    <string name="verification_id_card">Verifikasi KTP</string>
    <string name="click_here_to_upload_id_card">Klik Disini Untuk Upload KTP</string>
    <string name="click_here_to_upload_npwp">Klik Disini Untuk Upload NPWP</string>
    <string name="score_under_80_desc">Data pada gambar anda tidak jelas, silahkan pastikan kembali</string>
    <string name="nik">NIK</string>
    <string name="born">Tempat, Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="address">Alamat</string>
    <string name="marriedStatus">Status Perkawinan</string>
    <string name="citizenship">Kewarganegaraan</string>
    <string name="save">Simpan</string>
    <string name="take_picture">Ambil Gambar</string>
    <string name="rtrw">RT/RW</string>
    <string name="sub_district">Kel/Desa</string>
    <string name="district">Kecamatan</string>
    <string name="valid_until">Berlaku Hingga</string>
    <string name="religion">Agama</string>
    <string name="click_here_to_upload_driving_license">Klik disini untuk upload SIM</string>
    <string name="type">Jenis</string>
    <string name="sub_type">Sub Jenis</string>
    <string name="no">No</string>
    <string name="birth_place">Tempat Lahir</string>
    <string name="birth_date">Tanggal Lahir</string>
    <string name="blood_type">Golongan Darah</string>
    <string name="police">Kepolisian</string>
    <string name="verification_driving_license">Verifikasi SIM</string>
    <string name="verification_npwp">Verifikasi NPWP</string>
    <string name="registered">Terdaftar</string>
    <string name="kpp">KPP</string>
    <string name="edit">Ubah</string>
    <string name="upload">Upload Server</string>
    <string name="delete">Hapus</string>
    <string name="export">Ekspor</string>
    <string name="search_hint">Cari nama, nomor hp, nomor whatsapp</string>
    <string name="select_font">Pilih Font</string>
    <string name="nomor_pokok_wajib_pajak">Nomor Pokok Wajib Pajak</string>
    <string name="region">Wilayah</string>
    <string name="select_document">Pilih Dokumen</string>
    <string name="surat_izin_mengemudi">Surat Izin Mengemudi</string>
</resources>