<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activity.FormActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/full_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/toggleGroup"
                android:layout_margin="8dp"
                app:checkedButton="@id/buttonMale"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonMale"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonFemale"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/job" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:lines="4"
                    android:maxLines="4"
                    android:gravity="start|top"
                    android:id="@+id/inputAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefixText="+62"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="13"
                    android:id="@+id/inputPhone"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:prefixText="+62"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLength="13"
                    android:id="@+id/inputWhatsapp"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/whatsapp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:id="@+id/cardKTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/textKtp"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:gravity="center|start"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_id_card"
                    app:drawableEndCompat="@drawable/ic_round_keyboard_arrow_right_24" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:id="@+id/cardSim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/textSim"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:gravity="center|start"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_driving_license"
                    app:drawableEndCompat="@drawable/ic_round_keyboard_arrow_right_24" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_margin="8dp"
                android:id="@+id/cardNpwp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/textNpwp"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:gravity="center|start"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_npwp"
                    app:drawableEndCompat="@drawable/ic_round_keyboard_arrow_right_24" />

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonProcess"
                android:layout_margin="8dp"
                android:text="@string/process"/>

            <LinearLayout
                android:id="@+id/layoutButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:layout_margin="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edit"
                        android:id="@+id/buttonEdit"/>



                    <com.google.android.material.button.MaterialButton
                        android:layout_margin="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:backgroundTint="#710A08"
                        android:text="@string/delete"
                        android:id="@+id/buttonDelete"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_margin="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/upload"
                        android:id="@+id/buttonUpload"/>

                    <com.google.android.material.button.MaterialButton
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_margin="8dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/export"
                        android:id="@+id/buttonExport"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>