<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activity.KtpFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textFormId"
            android:padding="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardKTP"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/imageKtp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textKtp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/click_here_to_upload_id_card" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutIdCard"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputIdCard"
                android:inputType="number"
                android:maxLength="16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nik" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutName"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutBorn"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputBornDate"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/born" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutGender"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputGender"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gender" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutAddress"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputAddress"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutRtRw"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputRtRw"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rtrw" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutSubDisctrict"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputSubDistrict"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sub_district" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutDistrict"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputDistrict"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/district" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutReligion"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputReligion"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/religion" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutMarriedStatus"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputMarriedStatus"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/marriedStatus" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutJob"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputJob"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutCitizenship"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputCitizenship"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/citizenship" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:id="@+id/layoutValidUntil"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputValidUntil"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/valid_until" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/save"
            android:id="@+id/buttonSave"/>

    </LinearLayout>

</ScrollView>