<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".activity.KtpFormActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textFormId"
            android:padding="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardNpwp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp"
            app:cardBackgroundColor="@color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:scaleType="centerCrop"
                    android:id="@+id/imageNpwp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/textNpwp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/click_here_to_upload_npwp" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutName"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputName"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutNo"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputNo"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutAddress"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputAddress"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutRegistered"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputRegistered"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registered" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutIdCard"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputIdCard"
                android:inputType="number"
                android:maxLength="16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nik" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutKpp"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputKpp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kpp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layoutRegion"
            android:layout_margin="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:enabled="false"
                android:id="@+id/inputRegion"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/region" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/save"
            android:id="@+id/buttonSave"/>

    </LinearLayout>

</ScrollView>